--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mygento/module-admin-inactivity",
-  "description": "Magento 2 Auto Lock admin users by inactivity period",
+  "description": "Adobe Commerce Auto Lock admin users by inactivity period",
   "type": "magento2-module",
   "license": "OSL-3.0",
   "authors": [{
