--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "magento/module-user": "101.2.*"
   },
   "require-dev": {
-    "mygento/coding-standard": "v2.4.x-dev"
+    "mygento/coding-standard": "~2.14.0"
   },
   "autoload": {
     "files": [
